Fixed the issue of inconsistent movie card height when the title wraps to a second line.

--- a/MovieDG/MovieDG.Web/wwwroot/css/style.css
+++ b/MovieDG/MovieDG.Web/wwwroot/css/style.css
@@ -49,6 +49,7 @@ body {
     max-width: 100%;
     transition: all 0.3s ease-out 0s;
 }
+
 .f-left {
     float: left
 }
@@ -1183,36 +1184,42 @@ label {
                 .banner-meta ul li.category > a + a {
                     margin-left: 5px;
                 }
-.category > a ~ a::before{
-        content: ', ';
-    }
+
+.category > a ~ a::before {
+    content: ', ';
+}
+
 .details-content p a {
     color: #bcbcbc;
 }
-    .details-content a:hover {
-        color: #e4d804;
-    }
-    .details-content a ~ a::before {
-        content: ', ';
-    }
-b{
+
+.details-content a:hover {
+    color: #e4d804;
+}
+
+.details-content a ~ a::before {
+    content: ', ';
+}
+
+b {
     font-size: 18px;
     color: dimgray;
 }
-            .banner-meta ul li.release-time > span {
-                font-size: 14px;
-                font-weight: 500;
-                color: #e3dfdf;
-            }
 
-                .banner-meta ul li.release-time > span + span {
-                    margin-left: 15px;
-                }
+.banner-meta ul li.release-time > span {
+    font-size: 14px;
+    font-weight: 500;
+    color: #e3dfdf;
+}
 
-                .banner-meta ul li.release-time > span > i {
-                    font-size: 12px;
-                    margin-right: 5px;
-                }
+    .banner-meta ul li.release-time > span + span {
+        margin-left: 15px;
+    }
+
+    .banner-meta ul li.release-time > span > i {
+        font-size: 12px;
+        margin-right: 5px;
+    }
 
 .slider-bg {
     background-position: top center;
@@ -1833,7 +1840,6 @@ b{
             left: 0;
             top: 0;
             width: 100%;
-            height: 100%;
             background: #04050a;
             transition: .3s linear;
             opacity: 0;
